src/src/global.less
@import '~antd/lib/style/themes/default.less';

html,
body,
#root {
  height: 100%;
}

.colorWeak {
  filter: invert(80%);
}

.ant-layout {
  min-height: 100vh;
}

canvas {
  display: block;
}

body {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

:global {
  .ant-layout-header {
    background: #24292e !important;
    padding: 0 0 !important;
    height: 56px !important;
    line-height: 56px !important;
  }

  hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid @border-color-split;
    padding: 0;
  }

  .markdownContent {
    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
      padding: 0 0;
      margin: 0 0;
      font-weight: normal;
    }

    h1,
    h2 {
      font-size: @font-size-base + 8;
      margin: @padding-lg 0 (@padding-lg - 4) 0 !important;
    }

    h3 {
      border-left: 4px solid #67b6ff;
      padding-left: @padding-xs + 2;
      font-size: @font-size-base + 4;
      line-height: @font-size-base + 4;
      margin: 24px 0 24px !important;
    }

    h4 {
      font-size: @font-size-base + 2 !important;
      margin: @padding-md 0;
    }

    p {
      margin: @padding-md 0;
      line-height: @font-size-base + 10;
      text-align: justify;
    }

    img {
      display: block;
      vertical-align: middle;
      page-break-inside: avoid;
      max-width: 100%;
      border: 1px solid @border-color-split;
      margin: @padding-md auto;
    }

    pre,
    code {
      font-size: @font-size-base - 1;
      color: @text-color;
      background-color: @background-color-light;
    }

    pre {
      padding: @padding-xs;
    }

    code {
      padding: 1px 5px;
    }

    pre code {
      padding: 0 0;
    }

    blockquote {
      background-color: @background-color-light;
      padding: @padding-sm;
      color: @text-color-secondary;
      border-left: 2px solid @border-color-base;
      overflow: auto;
      word-wrap: break-word;
    }

    blockquote p {
      &:last-child {
        margin-bottom: 0;
      }

      &:first-child {
        margin-top: 0;
      }
    }

    ul,
    ol {
      padding-left: 20px;
      margin: @padding-md 0;

      ul,
      ol {
        margin: 5px 0;
      }
    }
  }
}

.container {
  width: 720px;
  margin: 0 auto;
}

